Centers nav menu on mobile; fixes overflow issues on mobile, fixes section 3 background image on mobile.

--- a/assets/css/_sass/landingpage.scss
+++ b/assets/css/_sass/landingpage.scss
@@ -40,7 +40,7 @@ a.nav-link:hover {
     position: fixed;
     top:0;
     left:0;
-    width:100vw;
+    width:100%;
     height: 100vh;
     display: block;
     z-index: -80;
@@ -48,11 +48,11 @@ a.nav-link:hover {
     background-size: cover;
     background-position: 20%;
     background-repeat: no-repeat;
-    -webkit-filter: brightness(.85);
-    -moz-filter: brightness(.85);
-    -o-filter: brightness(.85);
-    -ms-filter: brightness(.75);
-    filter:blur(0px) brightness(.35);
+    -webkit-filter: brightness(.35);
+    -moz-filter: brightness(.35);
+    -o-filter: brightness(.35);
+    -ms-filter: brightness(.35);
+    filter:brightness(.35);
 }
 
 .blur {
@@ -62,15 +62,15 @@ a.nav-link:hover {
     width: 100vw;
     height: 100%;
     display: block;
-    z-index: -70;
+    z-index: 0;
     background-image: $bg-image;
     background-size: cover;
     background-position: 50%;
     background-repeat: no-repeat;
-    -webkit-filter: brightness(.85);
-    -moz-filter: brightness(.85);
-    -o-filter: brightness(.85);
-    -ms-filter: brightness(.75);
+    -webkit-filter:blur(3px) brightness(.35);
+    -moz-filter:blur (3px) brightness(.35);
+    -o-filter:blur(3px) brightness(.35);
+    -ms-filter:blur (3px) brightness(.35);
     filter:blur(3px) brightness(.35);
 }
 
@@ -101,7 +101,6 @@ a.nav-link:hover {
     padding: 55px 0 0 0;
     background-color: $dark-color;
     height: 100%;
-    overflow-x: hidden;
     .content-lp {
         text-align: center;
         p {
@@ -147,12 +146,6 @@ a.nav-link:hover {
 .header-shape {
     z-index: 1;
     position: relative;
-    max-width: 700px;
-    max-height: 250px;
-    padding: 0px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .header-shape:before {
@@ -166,6 +159,12 @@ a.nav-link:hover {
     -webkit-transform: skew(-10deg);
     -moz-transform: skew(-10deg);
     -o-transform: skew(-10deg);
+    max-width: 700px;
+    max-height: 250px;
+    padding: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
                             
 
@@ -299,6 +298,7 @@ a.nav-link:hover {
         max-height: 85px;
         width: auto;
         transition: .5s ease;
+        margin-bottom: 35px;
 
     }
     img:hover {
@@ -461,11 +461,31 @@ a.nav-link:hover {
 }
 @media screen and (max-width: 768px) {
     .lp-nav {
-        top: 3px;
+        top: 0px;
+        padding-top: 15px;
+        padding-bottom: 35px;
         flex-direction: row;
+        right: 0;
+        width:100%;
+        left: 50%;
+        transform: translateX(-50%);
         justify-content: center;
         align-items: center;
         text-align: center;
+        background: linear-gradient(
+        hsl(0, 0%, 0%) 0%,
+        hsla(0, 0%, 0%, 0.738) 19%,
+        hsla(0, 0%, 0%, 0.541) 34%,
+        hsla(0, 0%, 0%, 0.382) 47%,
+        hsla(0, 0%, 0%, 0.278) 56.5%,
+        hsla(0, 0%, 0%, 0.194) 65%,
+        hsla(0, 0%, 0%, 0.126) 73%,
+        hsla(0, 0%, 0%, 0.075) 80.2%,
+        hsla(0, 0%, 0%, 0.042) 86.1%,
+        hsla(0, 0%, 0%, 0.021) 91%,
+        hsla(0, 0%, 0%, 0.008) 95.2%,
+        hsla(0, 0%, 0%, 0.002) 98.2%,
+        hsla(0, 0%, 0%, 0) 100%)
     }
     .nav-link {
     }
@@ -479,5 +499,8 @@ a.nav-link:hover {
     }
     .square-shape:before {
         height: 155px;
+    }
+    .parallax-lp {
+        overflow-x: hidden;
     }
 }
